# opus-rust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  RESTRUCTURING_PLAN.md  SILK_ENCODER_REDESIGN.md  build.rs
benches/: c_reference.rs  celt_internal.rs  dnn_bench.rs  encode_decode.rs
crates/opus/: Cargo.toml
crates/opus-celt/: CELT_TESTING_PLAN.md  Cargo.toml
crates/opus-celt/src/: bands.rs  decoder.rs  encoder.rs  fft.rs  lib.rs  lpc.rs  mathops.rs  mdct.rs  mode.rs  pitch.rs  quant_energy.rs  rate.rs  tables.rs
crates/opus-celt/tests/: encoder_roundtrip.rs
crates/opus-dnn/: Cargo.toml  CompletionPlan.md  PLAN.md  build.rs
crates/opus-dnn/benches/: dnn_bench.rs
crates/opus-dnn/src/: burg.rs  freq.rs  lib.rs  load.rs  pitchdnn.rs
crates/opus-dnn/src/data/: mod.rs
crates/opus-dnn/src/dred/: coding.rs  decoder.rs  encoder.rs  mod.rs  rdovae_dec.rs  rdovae_enc.rs  stats.rs
crates/opus-dnn/src/fargan/: mod.rs
crates/opus-dnn/src/lpcnet/: enc.rs  mod.rs  plc.rs
crates/opus-dnn/src/nndsp/: adacomb.rs  adaconv.rs  adashape.rs  mod.rs
crates/opus-dnn/src/nnet/: activations.rs  conv2d.rs  linear.rs  mod.rs  ops.rs  weights.rs
crates/opus-dnn/src/osce/: bbwenet.rs  common.rs  config.rs  features.rs  lace.rs  mod.rs  nolace.rs  structs.rs
crates/opus-dnn/tests/: blob_loading.rs
crates/opus-dnn/tools/: parse_c_weights.rs
crates/opus-ffi/: Cargo.toml  build.rs
crates/opus-ffi/src/: celt_wrapper.c  dnn_model_wrapper.c  dnn_pitchdnn_layers.c  dnn_wrapper.c  lib.rs  wrapper.c
crates/opus-ffi/tests/: cwrs_validate.c  gen_ms_test_vectors.c  gen_test_vectors.c
crates/opus-range-coder/: Cargo.toml
crates/opus-range-coder/src/: ctx.rs  cwrs.rs  decoder.rs  encoder.rs  laplace.rs  lib.rs  tables.rs
crates/opus-range-coder/tests/: roundtrip.rs
crates/opus-silk/: Cargo.toml
crates/opus-silk/src/: cng.rs  decode_core.rs  decode_indices.rs  decode_params.rs  decode_pulses.rs  decoder.rs  encode_indices.rs  encode_pulses.rs  encoder.rs  gain_quant.rs  lib.rs  lpc_analysis.rs  nlsf.rs  nlsf_encode.rs  noise_shape_analysis.rs  nsq.rs  nsq_del_dec.rs  pitch_analysis.rs  plc.rs  resampler.rs  signal_processing.rs  stereo.rs  stereo_encode.rs  tables.rs  vad.rs
crates/opus/benches/: c_reference.rs  celt_internal.rs  common.rs  encode_decode.rs
crates/opus/src/: decoder.rs  dnn_decoder.rs  dnn_silk_bridge.rs  dnn_types.rs  encoder.rs  error.rs  extensions.rs  lib.rs  multistream.rs  multistream_encoder.rs  packet.rs  projection.rs  repacketizer.rs  types.rs
crates/opus/tests/: a2nlsf_comparison.rs  c_reference_encode.rs  celt_bands_tests.rs  celt_fft_tests.rs  celt_mathops_tests.rs  celt_mdct_tests.rs  celt_pitch_tests.rs  celt_quant_energy_tests.rs  celt_rate_tests.rs  correctness_vs_c.rs  cross_validate.rs  dnn_model_tests.rs  dnn_nnet_tests.rs  dnn_pitchdnn_layers.rs  dnn_sparse_linear.rs  ffi_layer1_tests.rs  flp_analysis_tests.rs  flp_dsp_tests.rs  flp_frame_tests.rs  flp_wrapper_tests.rs  gain_match_test.rs  silk_compare_gains.rs  silk_gain_test.rs  silk_lbrr_tests.rs  silk_nsq_deldec_tests.rs  silk_pitch_tests.rs  silk_stereo_tests.rs
crates/opus/tests/common/: mod.rs
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: decoder.rs  dnn_decoder.rs  dnn_silk_bridge.rs  dnn_types.rs  encoder.rs  extensions.rs  lib.rs  projection.rs  types.rs
src/celt/: bands.rs  decoder.rs  encoder.rs  lpc.rs  mathops.rs  mdct.rs  mod.rs  mode.rs  pitch.rs  quant_energy.rs  rate.rs
src/dnn/: freq.rs  load.rs  pitchdnn.rs
src/dnn/data/: mod.rs
src/dnn/dred/: decoder.rs  encoder.rs  mod.rs  (+2 more)
src/range_coder/: ctx.rs  cwrs.rs  decoder.rs  encoder.rs  laplace.rs
src/silk/: cng.rs  decode_core.rs  decode_indices.rs  decode_params.rs  decode_pulses.rs  decoder.rs  encode_indices.rs  encode_pulses.rs  encoder.rs  gain_quant.rs  lpc_analysis.rs  nlsf.rs  nlsf_encode.rs  noise_shape_analysis.rs  nsq.rs  nsq_del_dec.rs  pitch_analysis.rs  plc.rs  resampler.rs  signal_processing.rs  stereo.rs  stereo_encode.rs  tables.rs  vad.rs
tests/: a2nlsf_comparison.rs  celt_bands_tests.rs  celt_encoder_roundtrip.rs  celt_fft_tests.rs  celt_lpc_tests.rs  celt_mathops_tests.rs  celt_mdct_tests.rs  celt_pitch_tests.rs  celt_quant_energy_tests.rs  celt_rate_tests.rs  cross_validate.rs  dnn_blob_loading.rs  dnn_model_tests.rs  dnn_nnet_tests.rs  dnn_pitchdnn_layers.rs  dnn_sparse_linear.rs  ffi_layer1_tests.rs  flp_analysis_tests.rs  flp_dsp_tests.rs  flp_frame_tests.rs  flp_wrapper_tests.rs  gen_ms_test_vectors.c  gen_test_vectors.c  range_coder_roundtrip.rs
tests/common/: mod.rs
tests/vectors/: celt_lowbr.packets  celt_lowbr.pcm  celt_sine440.packets  celt_sine440.pcm  celt_stereo_hbr.pcm  celt_stereo_lowbr.pcm  celt_stereo_silence.packets  hybrid_stereo_fb.packets  hybrid_stereo_fb.pcm  ms_quad.info  ms_quad.packets  ms_surround51.info  ms_surround51.pcm  silk_mb_sine350.pcm  silk_stereo_nb.packets  silk_stereo_wb.packets
tools/: dump_weights.c
(+67 files in other folders)
