[package]
name = "opus-dnn"
version = "1.0.0"
edition = "2024"
description = "DNN inference runtime for Opus audio codec (DRED, OSCE, deep PLC)"

[features]
default = ["dred", "osce", "deep-plc"]
deep-plc = []
dred = ["deep-plc"]
osce = []

[dependencies]
opus-celt = { path = "../opus-celt" }
opus-range-coder = { path = "../opus-range-coder" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dnn_bench"
harness = false

[lints.rust]
unsafe-code = "forbid"

[lints.clippy]
too-many-arguments = "allow"
# Float constants must match C reference exactly for bit-identical output.
excessive-precision = "allow"
approx-constant = "allow"
# Unrolled loops keep explicit `+ 0`, `* 1` to match C structure for cross-referencing.
identity-op = "allow"
manual-is-multiple-of = "allow"
# Indexed loops match C structure for cross-referencing.
needless-range-loop = "allow"
# Clamp patterns in ported code match C min/max idioms.
manual-clamp = "allow"
