[package]
name = "opus"
version = "2.0.3"
edition = "2024"
description = "Opus audio codec decoder in pure Rust"

[features]
default = []
dnn = ["dep:opus-dnn"]

[dependencies]
opus-range-coder = { path = "../opus-range-coder" }
opus-celt = { path = "../opus-celt" }
opus-silk = { path = "../opus-silk" }
opus-dnn = { path = "../opus-dnn", optional = true }

[dev-dependencies]
opus-ffi = { path = "../opus-ffi" }
opus-dnn = { path = "../opus-dnn" }
criterion = { version = "0.5", features = ["html_reports"] }

[lints.rust]
unsafe-code = "forbid"

[lints.clippy]
too-many-arguments = "allow"

[[bench]]
name = "encode_decode"
harness = false

[[bench]]
name = "c_reference"
harness = false

[[bench]]
name = "celt_internal"
harness = false
